# opencli-admin

./: .env.example  .env.nas.example  .gitattributes  .gitignore  AGENTS.md  AUDIT-cybernetic-remediation.md  CLAUDE.md  CONTEXT.md  DESIGN.md  Dockerfile  GOAL-2.md  GOAL-3.md  GOAL-4.md  GOAL-5.md  GOAL-6.md  GOAL-7.md  GOAL-agent-runtimes.md  GOAL.md  GRILL-KICKOFF.md  HANDOFF-strangler-fig.md  PLAN_adapter_selfheal.md  PLAN_plugin_system.md  README.md  README_HANDOVER.md  TESTING.md  TODOS.md  docker-compose.build.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start.sh
.claude/: CLAUDE.md  launch.json
agent/: Dockerfile  entrypoint.sh
backend/: agent_server.py  browser_pool.py  cli.py  config.py  database.py  main.py  mcp_server.py  opencli_runtime.py  scheduler.py  taxonomy.py  test_notification_ack.py  ws_agent_manager.py
chrome/: Dockerfile
compat/dify_graphon_runtime/: Dockerfile  THIRD_PARTY_NOTICES.md  app.py  contracts.py  engine.py  policy.py  pyproject.toml  run_registry.py
compat/dify_graphon_runtime/tests/: test_contract.py
configs/: a-share-quant-pack.json  a-share-quant-sources.json
docs/: ARCHITECTURE.md  BUG-TRIAGE-20260718.md  DESIGN_SYSTEM.md  PROJECT_MANAGEMENT.md  SYSTEM_ANALYSIS.md  WIRING_GAP_LEDGER.md  a-share-quant-data-map.md  backend-capability-exposure-matrix.yaml  backend-capability-frontend-integration-PRD.md  collection-pack-PRD.md  collection-pack-session-handoff.md  dify-p0-compatibility-runtime-PRD.md  frontend-operation-flow-5090-coordination.md  opencli-agent-data-operations-platform-PRD.md  (+4 more)
(+1008 files in other folders)
